Completed User Auth

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,8 @@
  *= require_tree .
  *= require_self
  */
+@import './vars';
 
 body {
-  font-family: "Helvetica Neue", HelveticaNeue, Helvetica, TeXGyreHeros, FreeSans, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
+  font-family: $main-font
 }
