--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -1,6 +1,16 @@
+@import './vars';
+
 .nav-bar {
-  margin-left: 40px;
+  margin-left: 0px;
   margin-top: 0px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-bottom: 0px;
+  background: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 50px;
 }
 
 
@@ -8,7 +18,7 @@
   font-size: 14px;
   float: right;
   background: transparent;
-  font-family: "Helvetica Neue", Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: $main-font;
   height: 40px;
 }
 
@@ -19,5 +29,53 @@
   text-align: center;
   display: inline-block;
   text-decoration: none;
-  margin-right: 40px;
+}
+
+.newUser:hover {
+  background-color: #41cb56;
+}
+
+.nav-header-dropdown {
+  margin: 0;
+  font-size: 14px;
+  display: none;
+  white-space: nowrap;
+  background: #fff;
+  border: 1px solid #ccc;
+  width: 100px;
+  margin-right: 30px;
+  -webkit-padding-start: 0px;
+}
+
+.nav-header-dropdown li button {
+  width: 100%;
+  text-align: center;
+
+}
+
+.dropdown:hover .nav-header-dropdown {
+  display: block;
+  position: absolute;
+  right: 1px;
+
+}
+
+
+.profile-pic {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-top: 10px;
+  display: inline;
+}
+
+#logo {
+  width: 50px;
+  height: 50px;
+  border-radius: 25%;
+  margin-top: 3.5px;
+}
+
+#logout {
+  font-size: 14px;
 }
