--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -1,17 +1,55 @@
+@import './vars';
+
 .session-container{
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
+  background: rgb(247, 248, 250);
 }
 .session-form {
   display: block;
   margin: 0 auto;
-  border: 3px solid #73AD21;
-  padding: 10px;
-  width: 40%;
+  border: 1px solid #eeeff2;
+  padding: 24px 40px 24px;
+  width: 400px;
   position: absolute;
-  top: 35vw;
+  top: 200px;
   transform: translateY(-50%);
   box-sizing: border-box;
+  background: #fff;
+  font-style: inherit;
+}
+
+.session-inputs label {
+  display: inline;
+  font-style: inherit;
+  font-size: 14px;
+  color: #71767a;
+  margin-bottom: 10px;
+}
+
+.session-input {
+  width: 80%;
+  margin: 6px 0px 17px 0px;
+  font-size: 14px;
+  padding: 8px 10px;
+  color: #525558;
+  border: 1px solid rgba(185, 193, 199, 0.5);
+}
+
+#status {
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#mainLogin {
+  width: auto;
+  text-align: center
+}
+
+.error-list {
+  list-style-type: none;
+  color: red;
 }
