--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   <% if logged_in? %>
     window.currentUser = <%= render(
-      "api/users/_user.json.jbuilder",
+      "api/users/user.json.jbuilder",
       user: current_user
     ).html_safe %>
   <% end %>
