--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -54,7 +54,8 @@
   margin-bottom: 20px;
 }
 
-#mainLogin {
+.mainButton {
+  margin-top: 10px;
   width: 100%;
   text-align: center;
   height: auto;
