correct custom validation

--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -1,7 +1,11 @@
 @import './vars';
 
-Link {
-  text-decoration: none;
+.dropdown-button {
+  border:1px solid #660000;
+  border-radius:5px;
+  color:#fff;
+  margin-right:10px;
+  padding:10px 10px 10px 10px;
 }
 .nav-bar {
   margin-left: 0px;
