--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -3,9 +3,10 @@
 .dropdown-button {
   border:1px solid #660000;
   border-radius:5px;
-  color:#fff;
-  margin-right:10px;
   padding:10px 10px 10px 10px;
+  display: block;
+  color: black;
+  text-decoration: none;
 }
 .nav-bar {
   margin-left: 0px;
