--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -37,6 +37,9 @@
   display: inline-block;
   text-decoration: none;
   height: 15px;
+  &:hover {
+    color: rgb(70, 205, 94)
+  }
 }
 
 .newUser:hover {
@@ -109,5 +112,9 @@
 }
 
 .upload {
+  height: 50px;
+}
+
+#nav-upload {
   height: 43px;
 }
