--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -38,7 +38,7 @@
   text-decoration: none;
   height: 15px;
   &:hover {
-    color: rgb(70, 205, 94)
+    background-color: rgb(70, 205, 94)
   }
 }
 
@@ -55,7 +55,7 @@
   border: 1px solid #ccc;
   width: 100px;
   margin-right: 150px;
-  margin-top: -3px;
+  margin-top: -5px;
   -webkit-padding-start: 0px;
 }
 
@@ -85,7 +85,7 @@
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  margin-top: 5px;
+  margin-top: 3.5px;
   display: inline;
 }
 
