--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <script type="text/javascript">
       window.logo = "<%= image_url('logo.png') %>"
       window.profile_pic = "<%= image_url('userpic.png') %>"
+      window.background = "<%= image_url('newbackground.jpg') %>"
     </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
