--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -1,4 +1,5 @@
 .photos-container {
+  margin-top: 1em;
   column-count:4;
   column-gap: 1em;
 }
@@ -68,4 +69,22 @@ textarea {
 
 #delete {
   background-color: red;
+}
+
+.greeting-message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#entry-button {
+  text-decoration: none;
+  color: white;
+  padding: 10px 20px;
+  border: 2px solid;
+  border-radius: 60%;
+  &:hover {
+    transform: scale(2) perspective(10px)
+  }
 }
