--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,15 @@
     <title>PxProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+<link rel="shortcut icon" href="<%= image_url('icon.png') %>", type="image/x-icon">
 
     <script type="text/javascript">
       window.logo = "<%= image_url('logo.png') %>"
       window.profile_pic = "<%= image_url('userpic.png') %>"
       window.background = "<%= image_url('newbackground.jpg') %>"
+      window.trump = "<%= image_url('trump.jpg') %>"
+      window.zuck = "<%= image_url('zuck.jpg') %>"
+      window.disaster = "<%= image_url('disaster.jpg') %>"
     </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
