--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -98,3 +98,12 @@ textarea {
     background: rgb(0, 166, 255)
   }
 }
+
+.search-bar {
+  display: block;
+  height: 35px;
+  width: 500px;
+  margin: 40px;
+  border-radius: 20px;
+  padding-left: 20px;
+}
