--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -6,6 +6,7 @@
   align-items: center;
   position: relative;
   background: rgb(247, 248, 250);
+  margin-top: 20vh;
 }
 .session-form {
   display: block;
