--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 43px;
+  height: 60px;
   border-bottom: 1px solid;
   border-bottom-color: #888888
 }
@@ -83,8 +83,8 @@
 }
 
 .profile-pic {
-  width: 35px;
-  height: 35px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   margin-top: 3.5px;
   display: inline;
@@ -98,10 +98,10 @@
 }
 
 #logo {
-  width: 35px;
-  height: 35px;
+  width: 60px;
+  height: 60px;
   border-radius: 25%;
-  margin-top: 5px;
+  margin-top: 0;
 }
 
 #second-button {
@@ -117,5 +117,6 @@
 }
 
 #nav-upload {
-  height: 43px;
+  height: 60px;
+  padding: 14px 45px;
 }
