--- a/app/assets/stylesheets/vars.scss
+++ b/app/assets/stylesheets/vars.scss
@@ -1,1 +1,1 @@
-$main-font: "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
+$main-font: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
