--- a/app/assets/stylesheets/nav_header.scss
+++ b/app/assets/stylesheets/nav_header.scss
@@ -87,9 +87,8 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  margin-top: 3.5px;
-  display: inline;
   padding-right: 20px;
+  padding-left: 20px;
 }
 
 .dropdown-button {
