--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <script type="text/javascript">
       window.logo = "<%= image_url('logo.png') %>"
       window.background = "<%= image_url('newbackground.jpg') %>"
+      window.load = "<%= image_url('load.svg') %>"
     </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
