--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -1,7 +1,9 @@
 .photos-container {
-  column-count:4;
+  column-count:3;
   column-gap: 1em;
   margin: 1em;
+  align-items: center;
+
 }
 
 .default-pic {
