--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -12,7 +12,7 @@
   margin: 0 0 1em;
 }
 
-.open-pic {
+.open-pic1 {
   width: 500px;
   max-width: 50%;
   justify-content: left;
@@ -22,19 +22,36 @@
   padding-left: 50px;
 }
 
-.open-pic img {
-  margin-top: auto;
-  max-width: 1000px;
-  max-height: 1000px;
+.show {
+  max-height: 850px;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin: auto 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   object-fit: contain;
 
+  .open-pic {
+    margin: 0;
+    top: 50%;
+    max-width: 1000px;
+    max-height: 1000px;
+    overflow: none;
+    object-fit: contain;
+
+  }
+
+  .details {
+    margin: 100px;
+    text-align: center;
+    align-self: center;
+  }
 }
 
-.details {
-  margin: 100px;
-  text-align: center;
-  align-self: center;
-}
+
 
 .preview-pic {
   max-width: 50%;
@@ -46,12 +63,6 @@
 
 .upload-form-container {
   background: white;
-}
-
-.show {
-  max-height: 500px;
-  display: flex;
-  justify-content: space-evenly;
 }
 
 .form-buttons {
