--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -1,13 +1,30 @@
+.photos-container-new {
+  padding-top: 0.5em;
+  .photo-row {
+    display: flex;
+    max-height: 50vh;
+    width: auto;
+    margin: 0 0.5em;
+  }
+}
+
 .photos-container {
   column-count:3;
   column-gap: 1em;
-  margin: 1em;
+  // margin: 0.5em;
   align-items: center;
 
 }
 
+.default-pic-container {
+  width: auto;
+  margin: 0.5em;
+}
+
 .default-pic {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   display: inline-block;
   margin: 0 0 1em;
 }
