--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -11,7 +11,6 @@
 .photos-container {
   column-count:3;
   column-gap: 1em;
-  // margin: 0.5em;
   align-items: center;
 
 }
@@ -22,11 +21,48 @@
 }
 
 .default-pic {
+  
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: inline-block;
   margin: 0 0 1em;
+      animation: fadein 3s;
+    -moz-animation: fadein 3s; /* Firefox */
+    -webkit-animation: fadein 3s; /* Safari and Chrome */
+    -o-animation: fadein 3s; /* Opera */
+}
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .open-pic1 {
@@ -50,6 +86,7 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   object-fit: contain;
+
 
   .open-pic {
     margin: 0;
