--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PxProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-<link rel="shortcut icon" href="<%= image_url('icon.png') %>", type="image/x-icon">
+    <link rel="shortcut icon" href="<%= image_url('icon.png') %>", type="image/x-icon">
 
     <script type="text/javascript">
       window.logo = "<%= image_url('logo.png') %>"
@@ -13,6 +14,7 @@
     </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
 
   <body>
