--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
       window.logo = "<%= image_url('logo.png') %>"
       window.background = "<%= image_url('newbackground.jpg') %>"
       window.load = "<%= image_url('load.svg') %>"
+      window.edit = "<%= image_url('edit-icon.png') %>"
     </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
