--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -108,11 +108,12 @@
 
 
 .preview-pic {
+  display: block;
   max-width: 50%;
   max-height: 50%;
   min-width: 10%;
   min-height: 10%;
-  margin-left: 5px;
+  margin: auto;
 }
 
 .upload-form-container {
